# plugin

./: .gitignore
bitbank_plugin/: .gitignore  README.md  pyproject.toml  pyrightconfig.json
bitbank_plugin/src/bitbank_plugin/: bitbank_plugin.py
bitbank_plugin/tests/: test_bitbank_plugin.py
bitbank_plugin/tests/data/: bitbank_sample.json  bitbank_sample_with_data_type.json  csv_to_json.py
osmosis_plugin/: Dockerfile  docker-compose.yml  pyproject.toml
osmosis_plugin/.devcontainer/: devcontainer.json
osmosis_plugin/.github/workflows/: ci.yml
osmosis_plugin/src/: main.py
osmosis_plugin/src/osmosis_plugin/: osmosis_plugin.py
osmosis_plugin/tests/: test_osmosis_plugin.py
osmosis_plugin/tests/data/: cosmos_transfer.json  delegate.json  exit_pool.json  ibc_received_effect0.json  ibc_received_effect1.json  ibc_transfer.json  join_pool.json  lock_tokens.json  swap.json  swap2.json
